code readability fix

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     background-color: rgba(19, 19, 19, 1);
 }
 
-.footer{
+.footer {
     height: 83px;
     background-color: rgba(19, 19, 19, 1);
 }
@@ -66,9 +66,10 @@ h3 {
     margin-bottom: 31px;
 }
 
-.tel_span{
+.tel_span {
     text-decoration-line: underline;
 }
+
 /* ОСТАЛЬНЫЕ СТИЛИ */
 
 /* ШАПКА САЙТА */
@@ -154,7 +155,8 @@ nav li a {
     background-color: rgba(255, 255, 255, 0);
     border: solid 1px rgba(255, 255, 255, 1);
 }
-.button-submit-app_mobile{
+
+.button-submit-app_mobile {
     display: none;
 }
 
@@ -237,21 +239,26 @@ nav li a {
     line-height: 25px;
     margin-bottom: 8px;
 }
+
 .projects_img_mobile {
     display: none;
     position: relative;
 }
-.projects_img_mobile img:nth-child(n+2){
+
+.projects_img_mobile img:nth-child(n+2) {
     position: absolute;
 }
-.projects_img_mobile img:nth-child(2){
+
+.projects_img_mobile img:nth-child(2) {
     top: 42%;
     left: 4%;
 }
-.projects_img_mobile img:last-child{
+
+.projects_img_mobile img:last-child {
     top: 42%;
     right: 4%;
 }
+
 .specifications {
     max-width: 450px;
     display: grid;
@@ -290,7 +297,9 @@ nav li a {
     top: 35%;
 }
 
-.depend_mobile{display: none;}
+.depend_mobile {
+    display: none;
+}
 
 hr {
     width: 55px;
@@ -360,7 +369,7 @@ hr {
     margin-top: 30px;
 }
 
-.checkbox_mobile{
+.checkbox_mobile {
     display: none;
 }
 
@@ -677,7 +686,7 @@ hr {
     margin-bottom: 25px;
 }
 
-.section_five_mobile_img{
+.section_five_mobile_img {
     display: none;
 }
 
@@ -721,7 +730,7 @@ hr {
     justify-content: space-around;
     margin-left: auto;
     margin-right: auto;
-    
+
 }
 
 .clients_img_name {
@@ -740,7 +749,7 @@ hr {
     margin: 41px 70px 39px 20px;
 }
 
-.clients_descriprion{
+.clients_descriprion {
     max-width: 376px;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
 }
@@ -885,7 +894,8 @@ hr {
 .label_form_question label {
     margin-left: 0px;
 }
-.label_form_question .text{
+
+.label_form_question .text {
     color: #FFF;
 }
 
@@ -918,13 +928,13 @@ hr {
     justify-content: center;
 }
 
-.map_img_mobile{
+.map_img_mobile {
     display: none;
 }
 
 /* ПОДВАЛ */
 
-.footer span{
+.footer span {
     font-family: 'Nunito Sans';
     font-weight: 400;
     font-size: 11px;
